# conda-recipes-slam

./: .travis.yml  LICENSE  README.md  build_all.sh
gtsam/: build.sh  meta.yaml
gtsam4/: build.sh  meta.yaml
isam/: build.sh  meta.yaml
pygtsam/: README.md  activate.sh  build.sh  deactivate.sh  meta.yaml
pygtsam/pygtsam/: CMakeLists.txt
pygtsam/pygtsam/include/: pybot_cv_types.hpp  pybot_eigen_types.hpp
pygtsam/pygtsam/include/utils/: eigen_numpy_conversion.hpp  opencv_numpy_conversion.hpp
pygtsam/pygtsam/src/: CMakeLists.txt  eigen_numpy_conversion.cpp  opencv_numpy_conversion.cpp  pybot_apriltags.cpp  pybot_cv_types.cpp  pybot_eigen_types.cpp  pybot_gtsam.cpp  pybot_types.cpp  pygtsam.cpp  pyisam.cpp
pygtsam/pygtsam/src/utils/: container.h  eigen_numpy_conversion.cpp  eigen_numpy_conversion.hpp  opencv_numpy_conversion.cpp  opencv_numpy_conversion.hpp  optional.h  pair.h  template.h
pygtsam/pygtsam/src/wrappers/: apriltags_wrapper.hpp
pyisam/: README.md  build.sh  meta.yaml
pyisam/pyisam/: CMakeLists.txt
pyisam/pyisam/include/pyisam/: pybot_eigen_types.hpp
pyisam/pyisam/src/: eigen_numpy_conversion.cpp  pybot_eigen_types.cpp  pygtsam.cpp  pyisam.cpp
